# game-inventory-tracker

./: .gitignore  README.md  flake.nix
backend/: .env  Cargo.toml
backend/.sqlx/: query-d8de09c9c96c2dac6270c76a9fbb89247f6602df6eb7da95e7579369b600c150.json
backend/src/: main.rs
web_app/: package.json  pnpm-lock.yaml  vite.config.ts
web_app/src/: AddGame.tsx  App.tsx  GameLibrary.tsx  Header.tsx  RecentGames.tsx  main.tsx
web_app/src/routes/: __root.tsx  index.tsx  library.tsx
