[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
reqwest = { version = "0.13.4", features = ["json"] }
